<resources>
    <string name="app_name">易插eCharger</string>

    <string name="rent_charger">租电桩</string>
    <string name="rent_charger_detail">电桩租用</string>
    <string name="share_charger">借电桩</string>
    <string name="share_charger_detail">电桩共享</string>

    <string name="start_time">起始时间</string>
    <string name="end_time">结束时间</string>

    <string name="destination">请输入你的目的地</string>

    <string name="order">订单</string>
    <string name="chat">联系</string>
    <string name="explore">发现</string>
    <string name="my">我的</string>
</resources>
