<?xml version="1.0" encoding="utf-8"?>
<cc.echarger.echarger.ui.component.MovableLinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/move_box"
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:background="@drawable/radius_tl20_tr20_grey100"
        android:orientation="vertical">
    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="100dp"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">
        <LinearLayout
                android:id="@+id/primary_btn"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal"
        >
            <LinearLayout
                    android:id="@+id/btn1"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_margin="15dp"
                    android:background="@drawable/radius_all8_white_stroke4_main1">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/rent_charger"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="0dp"
                        android:textSize="12sp"
                        android:text="@string/rent_charger_detail"/>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:layout_margin="15dp"
                    android:background="@drawable/radius_all8_white_stroke4_main1">
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text="@string/share_charger"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:layout_marginLeft="10dp"
                        android:layout_marginTop="0dp"
                        android:textSize="12sp"
                        android:text="@string/share_charger_detail"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp"
            android:layout_margin="20dp">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="15dp">
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
            >
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:textColor="@color/main_color1"
                        android:text="1月30日星期一"/>
                <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:orientation="horizontal"
                        android:gravity="right">
                    <TextView
                            android:text="@string/start_time"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:padding="7dp"
                            android:background="@drawable/radius_all8_grey100"
                            android:layout_marginRight="10dp"/>
                    <TextView
                            android:text="@string/end_time"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:padding="7dp"
                            android:background="@drawable/radius_all8_grey100"/>
                </LinearLayout>
            </LinearLayout>
            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:background="@drawable/radius_all8_grey100"
                    android:orientation="vertical">

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/destination"
                        android:textSize="18sp"
                        android:textStyle="bold"
                        android:padding="9dp"/>
            </LinearLayout>
        </LinearLayout>
    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:cardCornerRadius="10dp"
            app:cardElevation="20dp"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp">

        <cc.echarger.echarger.ui.component.Charger
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
        />

    </androidx.cardview.widget.CardView>
</cc.echarger.echarger.ui.component.MovableLinearLayout>
